ags (4.1.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented zoom of PDF user manual
	* implemented unix print support

ags (4.0.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags-fx-synth missing chorus destination buffer
	* fixed ags-fx-fm-synth missing chorus destination buffer
	* fixed ags-fx-sf2-synth missing chorus destination buffer
	* fixed ags-fx-sfz-synth missing chorus destination buffer

ags (4.0.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsFMSyncsynth remove callback
	* fixed AgsCompositeEditor remove wave channel selector callback
	* fixed AgsCompositeEditor machine selector set flags
	* improved AgsGui and AgsAudio introspected annotations

ags (4.0.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed unitialized value in ags_functional_fourier_transform_test.c

ags (4.0.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed removed unit tests in unit-system-tests.mk.am
	* fixed missing return values in libgsequencer_test.so
	* fixed ags_functional_fourier_transform_test_s16() potential floating point overflow

ags (4.0.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed meson test dependency of libsoup-3.0
	* improved gtk-doc

ags (4.0.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed rename machine dialog and machine selector popover
	* fixed rename machine audio dialog
	* fixed reposition machine audio dialog

ags (4.0.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsCompositeEditor machine radio button XML IO in ags_simple_file.c
	* fixed ags_window_file_timeout() to set title with markup

ags (4.0.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsWindow missing close-request callback
	* fixed meta-data window hide on close
	* fixed removing AgsSoundcardEditor
	* fixed AgsHybridSynth callbacks to use GtkCheckButton